--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "@babel/runtime": "^7.8.3",
     "jquery": "^3.4.1",
-    "meteor-node-stubs": "^1.0.0"
+    "materialize-css": "^1.0.0-rc.2",
+    "meteor-node-stubs": "^1.0.0",
+    "simpl-schema": "^1.9.0"
   },
   "meteor": {
     "mainModule": {
